--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="design">
     <div class="design1">
         <div class="design3">
-            <h1>web desigin</h1>
+            <h1>Web desigin</h1>
             <p class="design4">Topic Listing Template based on bootstrap 5</p>
             <img src="images/web page.jpg" alt="" class="design5" >
         </div>
@@ -154,6 +154,7 @@
     </div>
     <div class="image0">
         <img src="images/FAQ.jpg" alt="" class="image02">
+        <div class="align">
         <div class="question3">
             <b><pre><p class="question4">What is Topic Listing?<span class="arrow">&#9013;</span></p></pre></b>
             <div class="question5">
@@ -170,6 +171,7 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
     <div class="getintouch0">
         <div class="getintouch1">
@@ -180,7 +182,7 @@
                 <div class="googlemap1">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d232.32004925479782!2d77.67363581187804!3d11.435483571988692!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2sin!4v1754144459585!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="googlemap1"></iframe>
                 </div>
-                <div>
+                <div class="headoffice">
                     <b class="googlec1">Head office</b>
                     <p class="address" id="address1">Near Canara Bank,New Bus Stand,Bhavani.<br>Cell:98944 72796</p>
                     <hr class="hr2">
@@ -191,7 +193,7 @@
                             <b>Email : info@company.com</b>
                         </div>    
                 </div>
-                <div>
+                <div class="headoffice1">
                     <b class="googlec1">Home office</b>
                     <p class="address">CMPF+7G4 K K Nagar, Kalingarayanpalayam, Bhavani, Tamil Nadu</p>
                     <hr class="hr2">
