--- a/index.html
+++ b/index.html
@@ -1,153 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Graduate&family=Poiret+One&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Graduate&family=Poiret+One&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajex/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Poiret+One&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Poiret+One&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" text="text/css" href="design.css">
     <link rel="stylesheet" href="screenalign.css">
-  
+
 </head>
+
 <body>
     <div id="header">
         <header><span>&#10063;</span>
-        <b>Topic</b>
-       <a href="#"> 
-            <b class="topices"><a href="">Home</a></b>
-            <b class="topices"><a href="">Browse Topics</a></b>
-            <b class="topices"><a href="">How it works</a></b>
-            <b class="topices"><a href="">FAQs</a></b>
-            <b class="topices"><a href="">Contact</a></b>
-            <b class="topices"><a href="">Pages</a></b>
-            <b class="topices"><a href="">Topics Listing</a></b>
-            <b class="topices"><a href="">Contact Form</a></b>
-       </a>
+            <b>Topic</b>
+            <a href="#">
+                <b class="topices"><a href="">Home</a></b>
+                <b class="topices"><a href="">Browse Topics</a></b>
+                <b class="topices"><a href="">How it works</a></b>
+                <b class="topices"><a href="">FAQs</a></b>
+                <b class="topices"><a href="">Contact</a></b>
+                <b class="topices"><a href="">Pages</a></b>
+                <b class="topices"><a href="">Topics Listing</a></b>
+                <b class="topices"><a href="">Contact Form</a></b>
+            </a>
         </header>
     </div>
     <div class="header">
-        <b><div class="title">Discover. learn. Enjoy</div></b>
+        <b>
+            <div class="title">Discover. learn. Enjoy</div>
+        </b>
         <div class="headerdown">platform for creatives around the world</div>
         <div class="searchdiv">
             <div class="search">
                 <i class="fa fa-search"></i>
                 <input type="search" placeholder="Design, Code, Marketing, Finance ..." size="80px" class="input">
-                 &nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="searchbox"><a href="">search</a></button>
             </div>
         </div>
         <div class="div">
             <div class="topices1">
                 <div class="webdesign">Web Design</div>
-                <p class="para">When you search for free CSS templates, you will notice that TemplateMo is one of the best websites</p>
+                <p class="para">When you search for free CSS templates, you will notice that TemplateMo is one of the
+                    best websites</p>
                 <img src="images/webdesign.jpg" alt="image of the web design" id="image">
             </div>
             <div class="topices1" id="desi">
                 <div class="webdesign">Finance</div>
-                <p class="para">Topice listing Template include homepage ,listing page,detail page and contact page.You feel to edits</p>
+                <p class="para">Topice listing Template include homepage ,listing page,detail page and contact page.You
+                    feel to edits</p>
                 <div class="button">
                     <button class="button1"><a href="">learn More</a></button>
                 </div>
                 <div class="share">
-                        <b class="sharebutton">Share:</b>
-                        <button class="x"><a href="#" class="fa fa-twitter"></a></button>
-                        <button class="x"><a href="#" class="fa fa-facebook"></a></button>
-                        <button class="x"><a href="#" class="fa fa-pinterest"></a></button>
+                    <b class="sharebutton">Share:</b>
+                    <button class="x"><a href="#" class="fa fa-twitter"></a></button>
+                    <button class="x"><a href="#" class="fa fa-facebook"></a></button>
+                    <button class="x"><a href="#" class="fa fa-pinterest"></a></button>
                 </div>
             </div>
         </div>
     </div>
-<div class="title1">
-    <b class="Browse">Browse Topics</b>
-    <div class="browsetopices">
-    <b type="button" class="browsedesign"><a href="">Design</a></b>
-    <b type="button" class="browsedesign1"><a href="">Marketing</a></b>
-    <b type="button" class="browsedesign2"><a href="">Finance</a></b>
-    <b type="button" class="browsedesign3"><a href="">Music</a></b>
-    <b type="button" class="browsedesign4"><a href="">Education</a></b>
-    </div>
-    <div class="hr">
-        <hr>
-    </div>
-</div>
-<div class="design">
-    <div class="design1">
-        <div class="design3">
-            <h1>Web desigin</h1>
-            <p class="design4">Topic Listing Template based on bootstrap 5</p>
-            <img src="images/web page.jpg" alt="" class="design5" >
+    <div class="title1">
+        <b class="Browse">Browse Topics</b>
+        <div class="browsetopices">
+            <b type="button" class="browsedesign"><a href="">Design</a></b>
+            <b type="button" class="browsedesign1"><a href="">Marketing</a></b>
+            <b type="button" class="browsedesign2"><a href="">Finance</a></b>
+            <b type="button" class="browsedesign3"><a href="">Music</a></b>
+            <b type="button" class="browsedesign4"><a href="">Education</a></b>
+        </div>
+        <div class="hr">
+            <hr>
         </div>
     </div>
-    <div class="design1">
-        <div class="design3">
-            <h1>Graphic</h1>
-            <p class="design4">To the help of the phothoshop and canvas</p>
-            <img src="images/Graphic-Design.jpeg" alt="" class="design5">
+    <div class="design">
+        <div class="design1">
+            <div class="design3">
+                <h1>Web desigin</h1>
+                <p class="design4">Topic Listing Template based on bootstrap 5</p>
+                <img src="images/web page.jpg" alt="" class="design5">
+            </div>
+        </div>
+        <div class="design1">
+            <div class="design3">
+                <h1>Graphic</h1>
+                <p class="design4">To the help of the phothoshop and canvas</p>
+                <img src="images/Graphic-Design.jpeg" alt="" class="design5">
+            </div>
+        </div>
+        <div class="design1">
+            <div class="design3">
+                <h1>Logo Design</h1>
+                <p class="design4">there are a five topices in the logo design by use of photoshop</p>
+                <img src="images/logo design.webp" alt="" class="design5" id="design5">
+            </div>
         </div>
     </div>
-    <div class="design1">
-        <div class="design3">
-            <h1>Logo Design</h1>
-            <p class="design4">there are a five topices in the logo design by use of photoshop</p>
-            <img src="images/logo design.webp" alt="" class="design5" id="design5">
-        </div>
-    </div>
-</div>
     <div class="howtowork">
         <div class="title" id="title"><b>How Does the Work ?</b></div>
-            <div class="circle-1">
-                <div class="circle">
-                    <div class="circle0">
-                        <div class="circle1">
-                            <div class="circle2">
-                                <div class="circle3"><img src="images/questionmark.jpg" alt="" id="image1" class="image01"></div>
+        <div class="circle-1">
+            <div class="circle">
+                <div class="circle0">
+                    <div class="circle1">
+                        <div class="circle2">
+                            <div class="circle3"><img src="images/questionmark.jpg" alt="" id="image1" class="image01">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="content">Search your Favourite Topices </div>
-                <div class="content1">Take a Time in a day 1hour to spend a in your topices and do it for in one month after you can contious or not in the place that your topices</div>
             </div>
-            <div class="hr0">
-                <hr class="hr1">
-            </div>  
-            <div class="circle-1">
-                <div class="circle">
-                    <div class="circle0">
-                        <div class="circle1">
-                            <div class="circle2">
-                                <div class="circle3"><img src="images/bookes.jpg" alt="" id="image1" class="image01"></div>
-                            </div>
+            <div class="content">Search your Favourite Topices </div>
+            <div class="content1">Take a Time in a day 1hour to spend a in your topices and do it for in one month after
+                you can contious or not in the place that your topices</div>
+        </div>
+        <div class="hr0">
+            <hr class="hr1">
+        </div>
+        <div class="circle-1">
+            <div class="circle">
+                <div class="circle0">
+                    <div class="circle1">
+                        <div class="circle2">
+                            <div class="circle3"><img src="images/bookes.jpg" alt="" id="image1" class="image01"></div>
                         </div>
                     </div>
                 </div>
-                <div class="content">Bookmark & Keep it for yourself </div>
-                <div class="content1">Take a notes in a bites bites of the notes or your understanding methods to keep a notes or Get a PDF in your hand</div>
             </div>
-            <div class="hr0">
-                <hr class="hr1">
-            </div> 
-               <div class="circle-1">
-                <div class="circle">
-                    <div class="circle0">
-                        <div class="circle1">
-                            <div class="circle2">
-                                <div class="circle3"><img src="images/music.png" alt id="image1" class="image01"></div>
-                            </div>
+            <div class="content">Bookmark & Keep it for yourself </div>
+            <div class="content1">Take a notes in a bites bites of the notes or your understanding methods to keep a
+                notes or Get a PDF in your hand</div>
+        </div>
+        <div class="hr0">
+            <hr class="hr1">
+        </div>
+        <div class="circle-1">
+            <div class="circle">
+                <div class="circle0">
+                    <div class="circle1">
+                        <div class="circle2">
+                            <div class="circle3"><img src="images/music.png" alt id="image1" class="image01"></div>
                         </div>
                     </div>
                 </div>
-                <div class="content">Read & Enjoy</div>
-                <div class="content1">And the last is Enjoy the session and interest to learing in your self in Day by Day take and Enjoy in place of the platform pages </div>
             </div>
-            <div>
-                <p class="content3">Want to learn more? &nbsp;&nbsp;&nbsp;&nbsp; <button class="content4" > <a href="">Click out Youtube</a></button></p>
-            </div>
+            <div class="content">Read & Enjoy</div>
+            <div class="content1">And the last is Enjoy the session and interest to learing in your self in Day by Day
+                take and Enjoy in place of the platform pages </div>
+        </div>
+        <div>
+            <p class="content3">Want to learn more? &nbsp;&nbsp;&nbsp;&nbsp; <button class="content4"> <a href="">Click
+                        out Youtube</a></button></p>
+        </div>
     </div>
     <div class="question">
         <div class="question1">Frequently Asked <br>Questions</div>
@@ -155,22 +170,30 @@
     <div class="image0">
         <img src="images/FAQ.jpg" alt="" class="image02">
         <div class="align">
-        <div class="question3">
-            <b><pre><p class="question4">What is Topic Listing?<span class="arrow">&#9013;</span></p></pre></b>
-            <div class="question5">
-                <p class="question6">Topic Listing is free Bootstrap 5 CSS template. You are not allowed to redistribute this template on any other template collection website without our permission. Please contact TemplateMo for more detail. Thank you.</p>
-            </div>
-            <div class="space">
-                <div class="question3">
-                    <b><pre><p class="question4">How to find a topic?<span class="arrow">&#9013;</span></p></pre></b>
+            <div class="question3">
+                <b>
+                    <pre><p class="question4">What is Topic Listing?<span class="arrow">&#9013;</span></p></pre>
+                </b>
+                <div class="question5">
+                    <p class="question6">Topic Listing is free Bootstrap 5 CSS template. You are not allowed to
+                        redistribute this template on any other template collection website without our permission.
+                        Please contact TemplateMo for more detail. Thank you.</p>
+                </div>
+                <div class="space">
+                    <div class="question3">
+                        <b>
+                            <pre><p class="question4">How to find a topic?<span class="arrow">&#9013;</span></p></pre>
+                        </b>
+                    </div>
+                </div>
+                <div class="space">
+                    <div class="question3">
+                        <b>
+                            <pre><p class="question4">Does it need to paid?<span class="arrow">&#9013;</span></p></pre>
+                        </b>
+                    </div>
                 </div>
             </div>
-            <div class="space">
-                <div class="question3">
-                    <b><pre><p class="question4">Does it need to paid?<span class="arrow">&#9013;</span></p></pre></b>
-                </div>
-            </div>
-        </div>
         </div>
     </div>
     <div class="getintouch0">
@@ -180,29 +203,31 @@
             </div>
             <div class="googlemap0">
                 <div class="googlemap1">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d232.32004925479782!2d77.67363581187804!3d11.435483571988692!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2sin!4v1754144459585!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="googlemap1"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d232.32004925479782!2d77.67363581187804!3d11.435483571988692!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2sin!4v1754144459585!5m2!1sen!2sin"
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="googlemap1"></iframe>
                 </div>
                 <div class="headoffice">
                     <b class="googlec1">Head office</b>
                     <p class="address" id="address1">Near Canara Bank,New Bus Stand,Bhavani.<br>Cell:98944 72796</p>
                     <hr class="hr2">
-                        <div class="details">
-                            <i class="fa fa-phone" id="phone"></i>
-                            <b>Phone : 305-240-9671</b><br><br>
-                            <i class="fa-solid fa-envelope" id="email"></i>
-                            <b>Email : info@company.com</b>
-                        </div>    
+                    <div class="details">
+                        <i class="fa fa-phone" id="phone"></i>
+                        <b>Phone : 305-240-9671</b><br><br>
+                        <i class="fa-solid fa-envelope" id="email"></i>
+                        <b>Email : info@company.com</b>
+                    </div>
                 </div>
                 <div class="headoffice1">
                     <b class="googlec1">Home office</b>
                     <p class="address">CMPF+7G4 K K Nagar, Kalingarayanpalayam, Bhavani, Tamil Nadu</p>
                     <hr class="hr2">
-                        <div class="details">
-                            <i class="fa fa-phone" id="phone"></i>
-                            <b>Phone : 305-240-8079</b><br><br>
-                            <i class="fa-solid fa-envelope" id="email"></i>
-                            <b>Email : bgmi@home.com</b>
-                        </div>
+                    <div class="details">
+                        <i class="fa fa-phone" id="phone"></i>
+                        <b>Phone : 305-240-8079</b><br><br>
+                        <i class="fa-solid fa-envelope" id="email"></i>
+                        <b>Email : bgmi@home.com</b>
+                    </div>
                 </div>
             </div>
         </div>
@@ -223,18 +248,19 @@
         </div>
         <div class="footer2">
             <div class="footer3">
-            <b>Information</b><br><br>
-            <a href="">305-240-9671</a><br>
-            <a href="email">info@company.com</a>
+                <b>Information</b><br><br>
+                <a href="">305-240-9671</a><br>
+                <a href="email">info@company.com</a>
             </div>
         </div>
         <div class="footer2">
-                <div class="footer4">
-                    <p>ENGLISH<span class="arrow1">&#9013;</span></p></pre></b></p>
-                </div>
+            <div class="footer4">
+                <p>ENGLISH<span class="arrow1">&#9013;</span></p>
+                </pre></b></p>
+            </div>
             <p class="footer5">Copyright © 2048 Topic Listing Center.<br>All rights reserved.</p>
             <div class="footer6">
-            <p>Design:&nbsp;<span class="footer7">24@Prasath</span></p>
+                <p>Design:&nbsp;<span class="footer7">24@Prasath</span></p>
             </div>
         </div>
     </footer>
